<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <string name="search">Поиск</string>
    <string name="search_clear">Очистить поисковый запрос</string>

    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkMode">Тёмная тема</string>

    <string name="shareApp">Поделиться приложением</string>
    <string name="share_app_text">https://practicum.yandex.com/android-developer/?from=catalog</string>

    <string name="textSupport">Написать в поддержку</string>
    <string name="support_email" translatable="false">skamaletdin@yandex.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
</resources>