<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="@dimen/back_button_container_size"
            android:layout_height="@dimen/back_button_container_size"
            android:layout_marginStart="@dimen/back_button_margin_start">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backButton"
                    android:layout_width="@dimen/back_button_size"
                    android:layout_height="@dimen/back_button_size"
                    android:layout_gravity="center"
                    app:backgroundTint="@android:color/transparent"
                    app:strokeWidth="0dp"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    app:icon="@drawable/ic_arrow_back"
                    app:iconTint="@color/primary_text" />

        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_title_margin_start"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textAppearance="@style/TextAppearance.PlaylistMaker.Title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/screen_title_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_field_height"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/search_field_margin_top"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"

        android:background="@drawable/bg_search_field"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="@dimen/search_icon_size"
            android:layout_height="@dimen/search_icon_size"
            android:layout_marginStart="@dimen/search_icon_margin_start"
            android:layout_marginEnd="@dimen/search_icon_margin_end"
            android:src="@drawable/ic_search_16"
            app:tint="@color/search_field_text"
            />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/search_clear_button_width"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/YP_black"
            android:textColorHint="@color/search_field_text"
            android:textSize="@dimen/search_field_text_size" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="@dimen/search_clear_button_width"
            android:layout_height="@dimen/search_clear_button_height"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/search_clear"
            android:paddingHorizontal="@dimen/search_clear_padding_horizontal"
            android:paddingVertical="@dimen/search_clear_padding_vertical"
            android:src="@drawable/ic_clear"
            app:tint="@color/search_field_text"
            android:visibility="gone" />
    </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_divider_height"
        android:background="@color/YP_Light_Gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_height"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/navigationSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/bottom_navigation_icon_size"
                android:layout_height="@dimen/bottom_navigation_icon_size"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search_24"
                app:tint="@color/YP_Blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/search"
                android:textColor="@color/YP_Blue"
                android:textSize="@dimen/bottom_navigation_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigationMedia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/bottom_navigation_icon_size"
                android:layout_height="@dimen/bottom_navigation_icon_size"
                android:contentDescription="@string/media"
                android:src="@drawable/ic_media"
                app:tint="@color/primary_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/media"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/bottom_navigation_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigationSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/bottom_navigation_icon_size"
                android:layout_height="@dimen/bottom_navigation_icon_size"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings"
                app:tint="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/settings"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/bottom_navigation_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>